// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`options as array of strings renders radio group 1`] = `
<div>
  <div
    class="react-combo-boxes-radio"
  >
    <input
      class="react-combo-boxes-radio__input"
      id="id_option_apple"
      name="name"
      type="radio"
      value="Apple"
    />
    <label
      class="react-combo-boxes-radio__label"
      for="id_option_apple"
    >
      Apple
    </label>
  </div>
  <div
    class="react-combo-boxes-radio"
  >
    <input
      class="react-combo-boxes-radio__input"
      id="id_option_banana"
      name="name"
      type="radio"
      value="Banana"
    />
    <label
      class="react-combo-boxes-radio__label"
      for="id_option_banana"
    >
      Banana
    </label>
  </div>
  <div
    class="react-combo-boxes-radio"
  >
    <input
      class="react-combo-boxes-radio__input"
      id="id_option_orange"
      name="name"
      type="radio"
      value="Orange"
    />
    <label
      class="react-combo-boxes-radio__label"
      for="id_option_orange"
    >
      Orange
    </label>
  </div>
</div>
`;

exports[`options options as array of numbers renders radio group 1`] = `
<div>
  <div
    class="react-combo-boxes-radio"
  >
    <input
      class="react-combo-boxes-radio__input"
      id="id_option_0"
      name="name"
      type="radio"
      value="0"
    />
    <label
      class="react-combo-boxes-radio__label"
      for="id_option_0"
    >
      0
    </label>
  </div>
  <div
    class="react-combo-boxes-radio"
  >
    <input
      class="react-combo-boxes-radio__input"
      id="id_option_1"
      name="name"
      type="radio"
      value="1"
    />
    <label
      class="react-combo-boxes-radio__label"
      for="id_option_1"
    >
      1
    </label>
  </div>
  <div
    class="react-combo-boxes-radio"
  >
    <input
      class="react-combo-boxes-radio__input"
      id="id_option_2"
      name="name"
      type="radio"
      value="2"
    />
    <label
      class="react-combo-boxes-radio__label"
      for="id_option_2"
    >
      2
    </label>
  </div>
  <div
    class="react-combo-boxes-radio"
  >
    <input
      class="react-combo-boxes-radio__input"
      id="id_option_3"
      name="name"
      type="radio"
      value="3"
    />
    <label
      class="react-combo-boxes-radio__label"
      for="id_option_3"
    >
      3
    </label>
  </div>
</div>
`;

exports[`options options as array of objects group renders grouped options 1`] = `
<div>
  <div
    class="react-combo-boxes-radio"
  >
    <input
      class="react-combo-boxes-radio__input"
      id="id_option_apple"
      name="name"
      type="radio"
      value="Apple"
    />
    <label
      class="react-combo-boxes-radio__label"
      for="id_option_apple"
    >
      Apple
    </label>
  </div>
  <div
    class="react-combo-boxes-radio-group"
  >
    <div
      class="react-combo-boxes-radio-group__label"
    >
      Citrus
    </div>
    <div
      class="react-combo-boxes-radio"
    >
      <input
        class="react-combo-boxes-radio__input"
        id="id_option_orange"
        name="name"
        type="radio"
        value="Orange"
      />
      <label
        class="react-combo-boxes-radio__label"
        for="id_option_orange"
      >
        <span
          class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
        >
          Citrus 
        </span>
        Orange
      </label>
    </div>
    <div
      class="react-combo-boxes-radio"
    >
      <input
        class="react-combo-boxes-radio__input"
        id="id_option_lemon"
        name="name"
        type="radio"
        value="Lemon"
      />
      <label
        class="react-combo-boxes-radio__label"
        for="id_option_lemon"
      >
        <span
          class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
        >
          Citrus 
        </span>
        Lemon
      </label>
    </div>
  </div>
  <div
    class="react-combo-boxes-radio-group"
  >
    <div
      class="react-combo-boxes-radio-group__label"
    >
      Berry
    </div>
    <div
      class="react-combo-boxes-radio"
    >
      <input
        class="react-combo-boxes-radio__input"
        id="id_option_raspberry"
        name="name"
        type="radio"
        value="Raspberry"
      />
      <label
        class="react-combo-boxes-radio__label"
        for="id_option_raspberry"
      >
        <span
          class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
        >
          Berry 
        </span>
        Raspberry
      </label>
    </div>
    <div
      class="react-combo-boxes-radio"
    >
      <input
        class="react-combo-boxes-radio__input"
        id="id_option_strawberry"
        name="name"
        type="radio"
        value="Strawberry"
      />
      <label
        class="react-combo-boxes-radio__label"
        for="id_option_strawberry"
      >
        <span
          class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
        >
          Berry 
        </span>
        Strawberry
      </label>
    </div>
  </div>
</div>
`;

exports[`options options as array of objects label renders radio group 1`] = `
<div>
  <div
    class="react-combo-boxes-radio"
  >
    <input
      class="react-combo-boxes-radio__input"
      id="id_option_apple"
      name="name"
      type="radio"
      value="Apple"
    />
    <label
      class="react-combo-boxes-radio__label"
      for="id_option_apple"
    >
      Apple
    </label>
  </div>
  <div
    class="react-combo-boxes-radio"
  >
    <input
      class="react-combo-boxes-radio__input"
      id="id_option_banana"
      name="name"
      type="radio"
      value="Banana"
    />
    <label
      class="react-combo-boxes-radio__label"
      for="id_option_banana"
    >
      Banana
    </label>
  </div>
  <div
    class="react-combo-boxes-radio"
  >
    <input
      class="react-combo-boxes-radio__input"
      id="id_option_orange"
      name="name"
      type="radio"
      value="Orange"
    />
    <label
      class="react-combo-boxes-radio__label"
      for="id_option_orange"
    >
      Orange
    </label>
  </div>
</div>
`;
